@@ -1,3 +1,6 @@
+2017-06-07 Gregory L. Lee <lee218@llnl.gov>
+	* STATview.py, STATmain.py : main launcher should allow cl to be run when import of STATview or STATGUI fails
+
 2017-06-05 Gregory L. Lee <lee218@llnl.gov>
 	* x_ac_debuglibs.m4 : do not explicitly link in libelf, libdwarf, libiberty
 
